map tabs tab title spacing fix

--- a/src/css/scss/components/bootstrap/_tabs.scss
+++ b/src/css/scss/components/bootstrap/_tabs.scss
@@ -31,6 +31,10 @@
 
         &-item {
             flex: 1;
+
+            @include media-breakpoint-up(lg) {
+                max-width: 250px;
+            }
         }
 
         &-link {
@@ -42,17 +46,12 @@
             letter-spacing: 1.6px;
             line-height: 1.5;
             opacity: 0.6;
+            width: 100%;
             height: 100%;
             
-            @include media-breakpoint-up(lg) {
-                max-width: 250px;
-            }
-
             @include media-breakpoint-between(lg, xl) {
                 @include font-size(16px);
             }
-
-            
 
             &.active,
             &:hover {
